name:                hfasto
version:             0.1.0.0
synopsis:            A Fasto compiler
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable hfasto
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Fasto,
                       FastoCodeGenerator,
                       FastoParser,
                       Imp,
                       Mips,
                       MipsCodeGenerator,
                       MipsIO,
                       MipsRegAlloc,
                       T.RegAllocTest
  build-depends:       base,
                       attoparsec,
                       text,
                       mtl,
                       containers,
                       split
  default-language:    Haskell2010

test-suite test
  default-language:
    Haskell2010
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    tests,src
  main-is:
    Main.hs
  build-depends:
    base
